finishing the index page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css links -->
     <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/index.css" />
     <title>Fly Wtih Me</title>
   </head>
   <body>
@@ -15,19 +16,66 @@
 
       <div class="btns">
         <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="./html/profile.html">Profile</a></li>
+          <li><a href="#destinations">Destinations</a></li>
         </ul>
       </div>
     </header>
 
     <section class="main">
       <section class="child hero">
+        <div class="info">
+          <h1>Ready to fly with me?</h1>
+          <p>
+            It's not just in the name, we offer you exploring breathtaking
+            destinations, uncover hidden gems, and create unforgettable memories
+            with our comprehensive travel guide.
+          </p>
+        </div>
+
         <img src="/img/wallpaper.jpg" />
       </section>
 
-      <section class="child destination"></section>
+      <section class="child destination" id="destinations">
+        <div class="dest">
+          <div class="dest-img">
+            <img src="/img/efil.webp" />
+          </div>
+          <div class="dest-info">
+            <a href="./html/dest.html">Visit France</a>
+          </div>
+        </div>
+
+        <div class="dest">
+          <div class="dest-img">
+            <img src="/img/pyramid.jpg" />
+          </div>
+          <div class="dest-info">
+            <a href="./html/dest.html">Visit Egypt</a>
+          </div>
+        </div>
+
+        <div class="dest">
+          <div class="dest-img">
+            <img src="/img/taj.webp" />
+          </div>
+          <div class="dest-info">
+            <a href="./html/dest.html">Visit India</a>
+          </div>
+        </div>
+      </section>
     </section>
+    <footer>
+      <div class="logo">
+        <img src="/img/logooo.webp" />
+      </div>
+      <div class="footer-info">
+        <ul>
+          <li>Fly With Me</li>
+          <li>Beirut, Lebanon</li>
+          <li>+961 12345678</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
