initializing the profile page

--- a/html/profile.html
+++ b/html/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css links -->
     <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/profile.css" />
     <title>Profile</title>
   </head>
   <body>
@@ -19,7 +20,39 @@
         </ul>
       </div>
     </header>
+<section class="main">
+  <div class="profile-img">
+    <img src="/img/user-profile.jpg" />
 
+
+  </div>
+  <div class="profile-info">
+    <table class="table">
+      <tr>
+        <td>Name:</td>
+        <td>Bob Bob</td>
+      </tr>
+      <tr>
+        <td>E-mail:</td>
+        <td>bob.bob@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Age:</td>
+        <td>23</td>
+      </tr>
+      <tr>
+        <td>Gender:</td>
+        <td>male</td>
+      </tr>
+      <tr>
+        <td>Job:</td>
+        <td>Software Developer</td>
+      </tr>
+    </table>
+  </div>
+
+
+</section>
 
     <footer>
       <div class="logo">
