creating the destination page

--- a/html/dest.html
+++ b/html/dest.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css links -->
     <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/dest.css" />
     <title>Destination</title>
   </head>
   <body>
@@ -19,9 +20,21 @@
         </ul>
       </div>
     </header>
+    <section class="main">
+
+    <div class="dest-img">
+      <img src="/img/flag.png" />
+    </div>
+    <div class="dest-info">
+      <h1>France</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo doloremque dicta omnis nesciunt laboriosam. Maxime consequuntur accusamus dicta architecto itaque rem hic totam, eaque nostrum debitis, laboriosam quo. Consequatur, nam.</p>
+    </div>
+
+
+    </section>
     <footer>
       <div class="logo">
-        <img src="/img/logooo.webp" />
+        <img src="/img/logooo.webp" >
       </div>
       <div class="footer-info">
         <ul>
