editing the destination page

--- a/html/dest.html
+++ b/html/dest.html
@@ -21,20 +21,31 @@
       </div>
     </header>
     <section class="main">
-
-    <div class="dest-img">
-      <img src="/img/flag.png" />
-    </div>
-    <div class="dest-info">
-      <h1>France</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo doloremque dicta omnis nesciunt laboriosam. Maxime consequuntur accusamus dicta architecto itaque rem hic totam, eaque nostrum debitis, laboriosam quo. Consequatur, nam.</p>
-    </div>
-
-
+      <div class="dest-img">
+        <img src="/img/flag.png" />
+      </div>
+      <div class="dest-info">
+        <h1>Visit France</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+          doloremque dicta omnis nesciunt laboriosam. Maxime consequuntur
+          accusamus dicta architecto itaque rem hic totam, eaque nostrum
+          debitis, laboriosam quo. Consequatur, nam.
+        </p>
+        <div class="question">
+          <h5>Interested?</h5>
+          <input type="radio" name="chk">
+          <label >Yes</label>
+          
+          <input type="radio" name="chk">
+          <label >No</label>
+          
+        </div>
+      </div>
     </section>
     <footer>
       <div class="logo">
-        <img src="/img/logooo.webp" >
+        <img src="/img/logooo.webp" />
       </div>
       <div class="footer-info">
         <ul>
